--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,12 @@
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
+      <div class="alert alert-error">
+        The form contains <%= pluralize(@user.errors.count, "error") %>.
+      </div>
       <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li>* <%= msg %></li>
       <% end %>
       </ul>
     </div>
@@ -24,10 +25,14 @@
     <%= f.password_field :password %>
   </div>
   <div class="field">
+    <%= f.label :password_confirmation, "Confirm Password" %><br>
+    <%= f.password_field :password_confirmation %>
+  </div>
+  <div class="field">
     <%= f.label :avatar_url %><br>
     <%= f.text_field :avatar_url %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Account", :class => "btn btn-large btn-primary" %>
   </div>
 <% end %>
