--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -38,8 +38,8 @@
         <% if session[:user].present? %>
           <%= render 'layouts/user_menu' %>
         <% else %>
-          <li><%= link_to "Signup", new_user_path %></li>
-          <li><a href="#">Login</a></li>
+          <li><%= link_to "Signup", signup_path %></li>
+          <li><%= link_to "Login", signin_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
